--- a/Proyecto con Form/book-list-app/angular.json
+++ b/Proyecto con Form/book-list-app/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "88b9946f-d74a-4bbb-8fb4-6cff3e34dc3c"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
